--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WitcherWorld",
+  "name": "worlds",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
